Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,15 +1,14 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
+
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = "1386879276:AAEMTnFFuZY7KKKYMmkDkFDx3KxSQFiUgCY"
+GDRIVE_FOLDER_ID = "0AE3tOamtJrmoUk9PVA"
+OWNER_ID = 773177335
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API =
-TELEGRAM_HASH = ""
+IS_TEAM_DRIVE = "False"
+TELEGRAM_API = 1535860
+TELEGRAM_HASH = "5b1068860d7753758c0832372c608e50"
 # OPTIONAL CONFIG
 DATABASE_URL = ""
 AUTHORIZED_CHATS = ""
